<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tituloRevisionSeleccionada"
        style="@style/texto_titulo"
        android:layout_width="0dp"
        android:layout_height="@dimen/dim_container_titulo"
        android:layout_margin="@dimen/dim_margin_titulo"
        android:gravity="center"
        android:text="@string/no_se_muestran_revisiones"
        android:textSize="@dimen/dim_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/separator_det_revisiones"
        android:layout_width="0dp"
        android:layout_height="@dimen/separadores"
        android:layout_marginLeft="@dimen/dim_margin_detalle_inspeccion"
        android:layout_marginRight="@dimen/dim_margin_detalle_inspeccion"
        android:background="@color/separadores"
        android:minHeight="@dimen/separadores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloRevisionSeleccionada"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/botonIniciarInspeccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator_det_revisiones"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVInspector1"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/inspector1"/>

                <EditText
                    android:id="@+id/ETInspector1"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVInspector2"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/inspector2"/>

                <EditText
                    android:id="@+id/ETInspector2"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVColegiado"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/colegiado"/>

                <EditText
                    android:id="@+id/ETColegiado"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVEquipos"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/equipos_usados"/>

                <EditText
                    android:id="@+id/ETEquipos"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVMetodologia"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/metodologia"/>

                <EditText
                    android:id="@+id/ETMetodologia"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVCodigoNipsa"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/codigo_contrata"/>

                <EditText
                    android:id="@+id/ETCodigoNipsa"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVTrabajo"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/trabajo"/>

                <EditText
                    android:id="@+id/ETTrabajo"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TVCodigoInterno"
                    style="@style/texto_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:text="@string/codigo_interno"/>

                <EditText
                    android:id="@+id/ETCodigoInterno"
                    style="@style/edit_text_detalle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/botonIniciarInspeccion"
        style="@style/botones"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_alto_boton_pie"
        android:layout_gravity="center"
        android:drawableLeft="@android:drawable/ic_media_play"
        android:drawablePadding="@dimen/dim_padding_imagen_boton"
        android:text="@string/boton_iniciar_revision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>