<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nipsa.rpr.DialogoDatosNuevoEquipo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTituloNuevoEquipo"
                style="@style/texto_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/titulo_dialogo_nuevo_equipo"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNombreEquipo"
                style="@style/texto_detalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:layout_gravity="center"
                android:text="@string/nombre_equipo"/>

            <EditText
                android:id="@+id/etNombreEquipo"
                style="@style/edit_text_detalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/TVTipoEquipo"
                style="@style/texto_detalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="40"
                android:text="@string/tipo_" />

            <Spinner
                android:id="@+id/SpinnerTipoEquipo"
                style="@style/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dim_margin_detalle_equipo"
                android:paddingTop="@dimen/padding_spinner"
                android:paddingBottom="@dimen/padding_spinner"
                android:layout_weight="60" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TVTramoEquipo"
                style="@style/texto_detalle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40"
                android:layout_gravity="center"
                android:text="@string/tramo" />

            <Spinner
                android:id="@+id/SpinnerTramoEquipo"
                style="@style/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_margin_detalle_equipo"
                android:layout_gravity="center"
                android:paddingTop="@dimen/padding_spinner"
                android:paddingBottom="@dimen/padding_spinner"
                android:layout_weight="60" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
